Crash with Shader Node Group with missing datablock, only in "Material" viewport shading. #38355

Closed
opened 2014-01-24 20:58:46 +01:00 by Sebastian Brachi · 6 comments

Tested in:
Windows 7 64 + Nvidia GTX560 + Official 2.69
Linux 32 (Ubuntu) + Intel 945GM + Official 2.69

I discovered this while doing python scripting. In some cases I didn't expect, my script ended up creating an empty Shader Node group (having "missing data block"). Seems this is not a problem but it crashes when having the material with that empty group in "Material" shading mode only.

Steps to reproduce the issue:

*Open the attached blend file, and change viewport shading mode to "material". Blender crashes. No log seems to be output in Windows tmp directory.
*The python code in the blend file is the one that generates the corrupted material.mat_shading_crash.blend

Tested in: Windows 7 64 + Nvidia GTX560 + Official 2.69 Linux 32 (Ubuntu) + Intel 945GM + Official 2.69 I discovered this while doing python scripting. In some cases I didn't expect, my script ended up creating an empty Shader Node group (having "missing data block"). Seems this is not a problem but it crashes when having the material with that empty group in "Material" shading mode only. Steps to reproduce the issue: *Open the attached blend file, and change viewport shading mode to "material". Blender crashes. No log seems to be output in Windows tmp directory. *The python code in the blend file is the one that generates the corrupted material.[mat_shading_crash.blend](https://archive.blender.org/developer/F75354/mat_shading_crash.blend)

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @Brachi

Added subscriber: @Brachi

This issue was referenced by blender/blender-addons-contrib@21c56f754f

This issue was referenced by blender/blender-addons-contrib@21c56f754fd60ae82fc42a1f781afecde5227282

This issue was referenced by 21c56f754f

This issue was referenced by 21c56f754fd60ae82fc42a1f781afecde5227282
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit 21c56f754f.

Closed by commit 21c56f754f.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38355
No description provided.