Fix T38355: Crash with Shader Node Group with missing datablock, only in "Material" viewport shading.